WebContent/css/standard.css
html {
    height: 100%;
}

body {
    min-height: 100%;
    font-size: 100%;
    margin: 0em;
    padding: 0em;
    padding-left: 0em;
}

/* See http://www.sitepen.com/blog/2012/05/03/css-styling-of-dgrid/ */
/* Make sure grid rows are just one line high and the text is limited with an ellipsis */

.dgrid-row {
    /*height: 22px;*/
    height: 1.5em;
}

.dgrid-cell {
    text-overflow: ellipsis;
    white-space: nowrap;
}

.dijitMultiSelect {
	font-size: 100%;
}

.question {
}

.claro .dijitContentPane {
	padding-left: 2em;
}

.dijitDownArrowButton {
	width: 1em;
	margin-right: 0.5em;
}

#navigationDiv {
	background-color: #E0EEEE;
	padding-top: 0.25em;
	padding-bottom: 0.25em;
	padding-left: 0em; 
	padding-right: 0em; 
    border-bottom: 2px solid #ccc;
}

.wwsButtonImage {
	background-image: url(../images/WWS_BookCover_front_tiny.png);
    background-repeat: no-repeat;
	width: 43px;
	height: 60px;
	text-align: center;
}

.homeButtonImage {
	display: block;
    background-image: url(../images/ionicicons/home.svg);
    background-repeat: no-repeat;
    background-size: auto 100%;
    width: 20px;
    height: 20px;
    text-align: center;
}

.leftButtonImage {
    // display: block;
    background-image: url(../images/ionicicons/arrow-left-a.svg);
    background-repeat: no-repeat;
    background-size: auto 100%;
    width: 20px;
    height: 20px;
    // text-align: left;
}

.rightButtonImage {
    // display: block;
    background-image: url(../images/ionicicons/arrow-right-a.svg);
    background-repeat: no-repeat;
    background-size: auto 100%;
    width: 20px;
    height: 20px;
    // text-align: right;
    /* Next line may not work correctly in IE6 & IE7? Also does not work right in safari 5.1 with button a bit high. https://bugs.dojotoolkit.org/ticket/5170 */
    float: right;
}

/* This ensures that the story filter table columns are both one half of the space available */
.storyFilterTable-valueCell {
    width: 48%;
    max-width: 48%;
}

// Suggestion from: https://bugs.dojotoolkit.org/ticket/17044 and: http://jsfiddle.net/ondrek/3FjLJ/9/
.dijitTextBox .dijitInputInner { 
    white-space: nowrap; 
    text-overflow: ellipsis;
    -o-text-overflow: ellipsis;
    -ms-text-overflow: ellipsis; 
    overflow: hidden;
}

/* So the dgrids always show all data */
.dgrid {
    height: auto;
    min-height: 3em;
}

.dgrid .dgrid-scroller {
    position: relative;
    overflow: visible;
}

